--- a/po/es/comas.po
+++ b/po/es/comas.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: comas 1.0\n"
-"POT-Creation-Date: 2009-01-28 17:45-0600\n"
-"PO-Revision-Date: 2009-01-28 17:46-0600\n"
+"POT-Creation-Date: 2009-02-04 12:28-0600\n"
+"PO-Revision-Date: 2009-02-04 12:30-0600\n"
 "Last-Translator: Gunnar Wolf <gwolf@gwolf.org>\n"
 "Language-Team: Gunnar Wolf <gwolf@gwolf.org>\n"
 "MIME-Version: 1.0\n"
@@ -90,7 +90,7 @@ msgstr "Correo electrónico"
 
 #: app/models/person.rb:-
 msgid "Person|Random password salt"
-msgstr "Salt aleatorio"
+msgstr "Salt aleatorio de la contraseña"
 
 #: app/models/person.rb:-
 msgid "Person|Created at"
@@ -145,12 +145,12 @@ msgid "Conference|Call for papers closing date"
 msgstr "Fecha de cierre de convocatoria de propuesta"
 
 #: app/models/person.rb:-
-msgid "Conference|Conference start date"
-msgstr "Fecha de inicio de la actividad"
+msgid "Conference|Begins"
+msgstr "Fecha de inicio"
 
 #: app/models/person.rb:-
-msgid "Conference|Conference finish date"
-msgstr "Fecha de término de la actividad"
+msgid "Conference|Finishes"
+msgstr "Fecha de finalización"
 
 #: app/models/person.rb:98
 msgid "Registrations for this conference are closed"
@@ -254,12 +254,12 @@ msgid "timeslot"
 msgstr "horario"
 
 #: app/models/timeslot.rb:-
-msgid "Timeslot|Tolerance (before session starts)"
-msgstr "Tiempo de tolerancia antes de iniciar la sesión"
+msgid "Timeslot|Tolerance pre"
+msgstr "Tiempo de tolerancia previa al inicio"
 
 #: app/models/timeslot.rb:-
 msgid "Timeslot|Tolerance (after session starts)"
-msgstr "Tiempo de tolerancia una vez iniciada la sesión"
+msgstr "Tiempo de tolerancia posterior al inicio"
 
 #: app/models/timeslot.rb:-
 msgid "Timeslot|Room"
@@ -1897,86 +1897,76 @@ msgstr "Valor"
 msgid "Are you sure you want to delete this configuration entry?"
 msgstr "¿Está seguro de que desea eliminar esta llave de configuración?"
 
-#: lib/strings_in_db.rb:7
-msgid "PropType|Round table"
-msgstr "Mesa redonda"
+#: lib/strings_in_db.rb:26
+msgid "PropStatus|New"
+msgstr "Nueva"
 
-#: lib/strings_in_db.rb:8
-msgid "PropType|Tutorial"
-msgstr "Tutorial"
-
-#: lib/strings_in_db.rb:9
-msgid "PropType|Talk"
-msgstr "Conferencia"
-
-#: lib/strings_in_db.rb:10
-msgid "PropType|Workshop"
-msgstr "Taller"
-
-#: lib/strings_in_db.rb:13
-msgid "PropStatus|Accepted"
-msgstr "Aceptado"
-
-#: lib/strings_in_db.rb:14
+#: lib/strings_in_db.rb:27
 msgid "PropStatus|Cancelled"
 msgstr "Cancelado"
 
-#: lib/strings_in_db.rb:15
+#: lib/strings_in_db.rb:28
 msgid "PropStatus|Further details required"
 msgstr "Más datos requeridos"
 
-#: lib/strings_in_db.rb:16
-msgid "PropStatus|New"
-msgstr "Nuevo"
-
-#: lib/strings_in_db.rb:17
-msgid "PropStatus|Rejected"
-msgstr "Rechazado"
-
-#: lib/strings_in_db.rb:18
+#: lib/strings_in_db.rb:29
 msgid "PropStatus|Withdrawn"
 msgstr "Retirado"
 
-#: lib/strings_in_db.rb:21
+#: lib/strings_in_db.rb:30
+msgid "PropStatus|Rejected"
+msgstr "Rechazado"
+
+#: lib/strings_in_db.rb:31
+msgid "PropStatus|Accepted"
+msgstr "Aceptado"
+
+#: lib/strings_in_db.rb:34
+msgid "PropType|Round table"
+msgstr "Mesa redonda"
+
+#: lib/strings_in_db.rb:35
+msgid "PropType|Tutorial"
+msgstr "Tutorial"
+
+#: lib/strings_in_db.rb:36
+msgid "PropType|Talk"
+msgstr "Conferencia"
+
+#: lib/strings_in_db.rb:37
+msgid "PropType|Workshop"
+msgstr "Taller"
+
+#: lib/strings_in_db.rb:40
+msgid "Room|Auditorium"
+msgstr "Auditorio"
+
+#: lib/strings_in_db.rb:43
 msgid "AdminTask|Attendee administration"
 msgstr "Administración de asistentes"
 
-#: lib/strings_in_db.rb:22
+#: lib/strings_in_db.rb:44
 msgid "AdminTask|Conferences administration"
 msgstr "Administración de actividades"
 
-#: lib/strings_in_db.rb:23
+#: lib/strings_in_db.rb:45
 msgid "AdminTask|Academic committee"
 msgstr "Comité Académico"
 
-#: lib/strings_in_db.rb:24
+#: lib/strings_in_db.rb:46
 msgid "AdminTask|Attendance management"
 msgstr "Administración de asistencias"
 
-#: lib/strings_in_db.rb:25
-msgid "AdminTask|Attendance tracking"
-msgstr "Toma de asistencias"
-
-#: lib/strings_in_db.rb:26
+#: lib/strings_in_db.rb:47
 msgid "AdminTask|System configuration"
 msgstr "Configuración del sistema"
-
-#: lib/strings_in_db.rb:29
-msgid "Person|Admin tasks"
-msgstr "Roles administrativos"
-
-#: lib/strings_in_db.rb:30
-msgid "Person|Conferences"
-msgstr "Actividades"
 
 #: lib/menu_tree.rb:16
 msgid "Unexpected arguments received: "
 msgstr "Argumentos inesperados recibidos:"
 
-#~ msgid "Conference|Begins"
-#~ msgstr "Inicio de la actividad"
-#~ msgid "Conference|Finishes"
-#~ msgstr "Fin de la actividad"
-#~ msgid "Timeslot|Tolerance pre"
-#~ msgstr "Tiempo de tolerancia previo al inicio"
+#~ msgid "Conference|Conference start date"
+#~ msgstr "Fecha de inicio de la actividad"
+#~ msgid "Conference|Conference finish date"
+#~ msgstr "Fecha de término de la actividad"
 
